--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="Mad_libs element" id="mad">Mad libs</div>
             <div class="Tom_Thumb element" id="tom">Tom Thumb</div>
             <div class="theme element" id="theme">Change to dark theme</div>
+            <div class="element" id="cookie">Add cookie</div>
         </div>
         <div class="mainpage">
             <div class="form">
